[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menú.gd" type="Script" id=1]
[ext_resource path="res://lletres xules.tres" type="DynamicFont" id=2]
[ext_resource path="res://Born2bSportyV2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://KinematicBody2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Light-Years_v001.mp3" type="AudioStream" id=5]
[ext_resource path="res://Fons.gd" type="Script" id=6]
[ext_resource path="res://Fondo nivell 1 .jpg.tres" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 58, 129.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 53.5, 134.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200.4, 10 )

[sub_resource type="DynamicFont" id=1]
size = 55
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -707, -282 )
script = ExtResource( 1 )

[node name="Fons" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 7 )
expand = true
script = ExtResource( 6 )

[node name="Canvi 1" type="Area2D" parent="Fons"]
position = Vector2( 272, -25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fons/Canvi 1"]
position = Vector2( 472, 443.75 )
shape = SubResource( 3 )

[node name="Canvi 2" type="Area2D" parent="Fons"]
position = Vector2( 89, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fons/Canvi 2"]
position = Vector2( 302.5, 410.25 )
shape = SubResource( 4 )

[node name="Canvi 3" type="Area2D" parent="Fons"]
position = Vector2( -254, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fons/Canvi 3"]
position = Vector2( 302.5, 410.25 )
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 510, 538 )
scale = Vector2( 5, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 31.4, 19.5 )
shape = SubResource( 2 )

[node name="Paco" parent="." instance=ExtResource( 4 )]
position = Vector2( 907, 419 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 344.0
margin_top = 174.0
margin_right = 679.0
margin_bottom = 426.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 335.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 335.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "El destí de Paco"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 335.0
margin_bottom = 252.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 27.0
margin_right = 308.0
margin_bottom = 176.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 281.0
margin_bottom = 56.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 281.0
margin_bottom = 56.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 56.0
rect_min_size = Vector2( 24, 0 )
rect_pivot_offset = Vector2( -1152, -62 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 281.0
margin_bottom = 56.0
rect_min_size = Vector2( 253, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Inici"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 60.0
margin_right = 281.0
margin_bottom = 116.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 281.0
margin_bottom = 56.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 24.0
margin_bottom = 56.0
rect_min_size = Vector2( 24, 0 )
rect_pivot_offset = Vector2( -1152, -62 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 28.0
margin_right = 281.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Configuració"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 281.0
margin_bottom = 176.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 281.0
margin_bottom = 56.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 24.0
margin_bottom = 56.0
rect_min_size = Vector2( 24, 0 )
rect_pivot_offset = Vector2( -1152, -62 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 28.0
margin_right = 281.0
margin_bottom = 56.0
rect_min_size = Vector2( 253, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sortir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="body_entered" from="Fons/Canvi 1" to="Fons" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Fons/Canvi 2" to="Fons" method="_on_Canvi_2_body_entered"]
[connection signal="body_entered" from="Fons/Canvi 3" to="Fons" method="_on_Canvi_3_body_entered"]
